# swig-sandbox

./: .gitignore  CMakeLists.txt  README.md  cleAddImageAndScalarKernel.cpp  cleAddImageAndScalarKernel.h  cleAddImageAndScalarKernel.hpp  cleBuffer.cpp  cleBuffer.h  cleCommandQueueManager.cpp  cleCommandQueueManager.h  cleCommandQueueManager.hpp  cleContextManager.cpp  cleContextManager.h  cleContextManager.hpp  cleDataType.cpp  cleDataType.hpp  cleDeviceManager.cpp  cleDeviceManager.h  cleDeviceManager.hpp  cleFloat.cpp  cleFloat.h  cleGPU.cpp  cleGPU.h  cleGPU.hpp  cleInt.cpp  cleInt.h  cleKernel.cpp  cleKernel.h  cleKernel.hpp  cleLightObject.cpp  cleLightObject.h  cleOperations.h  cleOperations.hpp  clePlatformManager.cpp  clePlatformManager.h  clePlatformManager.hpp  cle_add_image_and_scalar_2d.hpp  cle_add_image_and_scalar_3d.hpp  cle_preamble.hpp  clesperanto.cpp  (+5 more)
swig/: CMakeLists.txt  cle.i
swig/python/: CMakeLists.txt  setup.py.in
